# CRM-1-Autorepo

./: .gitignore  .gitmodules  README.md  from_repos.json  generate.py  main.py  pyproject.toml  repo.hjson  settings.json
.github/ISSUE_TEMPLATE/: mod-request.md
.github/workflows/: build-repo.yml  generate-test.yml  python-app.yml  sync-submodules.yml  update-repo.yml
crm1_autorepo/: __init__.py  cli.py  utils.py
crm1_autorepo/data/: repo.py
crm1_autorepo/parser/: __init__.py  quilt_mod_json.py
utils/: __init__.py  utils.py
utils/data/: __init__.py  dependency.py  downloadable_file.py  mod.py  mod_settings.py  mod_version.py  modext.py  release.py  repo.py
utils/parser/: __init__.py  build_gradle_kts.py  fabric_mod_json.py  gradle_properties.py  quilt_mod_json.py
utils/provider/: __init__.py  codeberg.py  forgejo.py  github.py
