[tool.poetry]
name = "crm1-autorepo"
version = "0.0.1"
description = ""
authors = ["JoJoJux <80523427+J0J0HA@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
crm1 = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
